--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 		<div >
     		<label class="input">密码:
-    		<input type="text" id="pwd">
+    		<input type="password" id="pwd" >
 			</label>
 			
             <button onclick="javascript:encrypt();">加密 </button>
